--- a/pages/info.html
+++ b/pages/info.html
@@ -420,6 +420,42 @@
                 </div>
               </div>
             </div>
+            <!-- Server Card: ResonanceVerse -->
+            <div class="bg-gray-50 p-6 rounded-lg shadow-sm hover:shadow-md transition-shadow w-full md:w-5/12 lg:w-3/10 max-w-sm server-card">
+              <div class="flex items-center space-x-4">
+                <div class="flex-shrink-0 w-12 h-12 rounded-full overflow-hidden">
+                  <a href="https://discord.com/invite/dreamworks" target="_blank" rel="noopener noreferrer">
+                    <img src="https://raw.githubusercontent.com/TheDARTProject/Website-Images/refs/heads/main/server-images/RESONANCE_VERSE.png" alt="Server Icon" class="discord-server-icon w-full h-full object-cover">
+                  </a>
+                </div>
+                <div>
+                  <h4 class="text-lg font-semibold text-indigo-600">
+                    <b>ResonanceVerse</b>
+                  </h4>
+                  <p class="text-gray-600"> Members</p>
+                  <p class="text-gray-600">Active Contributor</p>
+                  <p class="text-gray-600 case-count">- Cases Contributed</p>
+                </div>
+              </div>
+            </div>
+            <!-- Server Card: The Blade of Tempest -->
+            <div class="bg-gray-50 p-6 rounded-lg shadow-sm hover:shadow-md transition-shadow w-full md:w-5/12 lg:w-3/10 max-w-sm server-card">
+              <div class="flex items-center space-x-4">
+                <div class="flex-shrink-0 w-12 h-12 rounded-full overflow-hidden">
+                  <a href="https://discord.com/invite/PBpWwJgCGg" target="_blank" rel="noopener noreferrer">
+                    <img src="https://raw.githubusercontent.com/TheDARTProject/Website-Images/refs/heads/main/server-images/THE_BLADE_OF_TEMPEST.png" alt="Server Icon" class="discord-server-icon w-full h-full object-cover">
+                  </a>
+                </div>
+                <div>
+                  <h4 class="text-lg font-semibold text-indigo-600">
+                    <b>The Blade of Tempest</b>
+                  </h4>
+                  <p class="text-gray-600"> Members</p>
+                  <p class="text-gray-600">Active Contributor</p>
+                  <p class="text-gray-600 case-count">- Cases Contributed</p>
+                </div>
+              </div>
+            </div>
             <!-- Server Card: Anonymous Servers -->
             <div class="bg-gray-50 p-6 rounded-lg shadow-sm hover:shadow-md transition-shadow w-full md:w-5/12 lg:w-3/10 max-w-sm server-card">
               <div class="flex items-center space-x-4">
@@ -428,7 +464,7 @@
                 </div>
                 <div>
                   <h4 class="text-lg font-semibold text-indigo-600">
-                    <b>3 Anonymous Servers</b>
+                    <b>4 Anonymous Servers</b>
                   </h4>
                   <p class="text-gray-600">Member Count Hidden</p>
                   <p class="text-gray-600">Active Contributor</p>
